# mac13-wheel-debug

./: .gitignore  README.md  setup.cfg  setup.py  troubleshooting.md
.github/workflows/: build.yml
hello_cibw/: __init__.py
src/: hello.c
