[metadata]
name = hello-cibw
version = 0.0.1
author = Example Author
author_email = you@example.com
description = Minimal cibuildwheel macOS13 reproduction
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/yourusername/cibw-macos13-test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
python_requires = >=3.8
